new functionalities added to android

--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_admin_home.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_admin_home.xml
@@ -116,6 +116,25 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="sendSponsorNotifications"
+                    android:text="Send Notification to Sponsors"/>
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="sendSponsorNotificationsEvent"
+                    android:text="Send Notification to Sponsors"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
