--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_main.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/fragmentScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
+        android:layout_height="match_parent"
+        android:contentDescription="Main Activity Scroll View"
+        app:layout_constraintBottom_toTopOf="@+id/buttons">
 
-        <FrameLayout
-            android:id="@+id/framelayout"
+        <LinearLayout
+            android:id="@+id/fragmentLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@+id/fragmentScrollView">
 
-    </LinearLayout>
+            <FrameLayout
+                android:id="@+id/framelayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@+id/framelayout"
+                app:layout_constraintEnd_toStartOf="@+id/buttons"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/buttons"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toEndOf="@+id/framelayout"
+                app:layout_constraintTop_toBottomOf="@+id/fragmentScrollView">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:onClick="loadLoginFragment"
-            android:text="LOGIN" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.3"
+                    android:onClick="loadLoginFragment"
+                    android:text="LOGIN"/>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.3"
-            android:onClick="loadRegisterFragment"
-            android:text="REGISTER" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.3"
+                    android:onClick="loadRegisterFragment"
+                    android:id="@+id/registerButton"
+                    android:text="REGISTER"
+                    app:layout_constraintTop_toBottomOf="@+id/buttons"/>
 
-    </LinearLayout>
-</LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
