--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_sponsor_home.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_sponsor_home.xml
@@ -16,8 +16,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-
         android:textSize="20dp"
         android:text="Sponsor Home"
         android:layout_marginTop="10dp"
@@ -26,13 +24,30 @@
 
     <WebView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
-
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/orphangeChildDashboardWebView"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="startBackgroundService"
+            android:text="Start Service"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="stopBackgroundService"
+            android:text="Stop Service"/>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
