--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_adoptive_status_table.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_adoptive_status_table.xml
@@ -14,7 +14,7 @@
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ROLES TABLE"
+        android:text="ADOPT STATUS TABLE"
         android:textSize = "20dp"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
