--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_child_table.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_child_table.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".AdminView.Child.ChildsTable">
 
@@ -47,28 +48,32 @@
                     android:layout_height="30dp"
                     android:gravity="center"
                     android:text="NAME"
-                    android:background="@drawable/cell_shape"/>
+                    android:background="@drawable/cell_shape"
+                    android:textSize="10dp"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="50dp"
                     android:layout_height="30dp"
                     android:gravity="center"
                     android:text="GENDER"
-                    android:background="@drawable/cell_shape"/>
+                    android:background="@drawable/cell_shape"
+                    android:textSize="10dp"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:gravity="center"
                     android:text="AGE"
-                    android:background="@drawable/cell_shape"/>
+                    android:background="@drawable/cell_shape"
+                    android:textSize="10dp"/>
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="100dp"
                     android:layout_height="30dp"
                     android:gravity="center"
                     android:text="ADOPT STATUS"
-                    android:background="@drawable/cell_shape"/>
+                    android:background="@drawable/cell_shape"
+                    android:textSize="10dp"/>
 
             </TableRow>
 
