--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_roles_table.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_roles_table.xml
@@ -3,71 +3,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="10dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".AdminView.Role.RolesTable">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/sponsor_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#CE000000"
-        >
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/txt"
+    <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sponsors Details"
+        android:text="ROLE TABLE"
         android:textSize = "20dp"
-        android:textStyle="bold">
-    </TextView>
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textStyle="bold"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_width="wrap_content"
+        android:layout_height="500dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:background="@drawable/cell_shape">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TableRow
-                android:background="#51B435"
-                android:padding="10dp">
+            <TableRow>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="150dp"
+                    android:layout_height="30dp"
                     android:gravity="center"
-                    android:text="ID" />
+                    android:text="ID"
+                    android:background="@drawable/cell_shape"
+                    android:textSize="10dp"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="150dp"
+                    android:layout_height="30dp"
                     android:gravity="center"
-                    android:text="ROLE" />
+                    android:text="ROLE"
+                    android:background="@drawable/cell_shape"
+                    android:textSize="10dp"/>
 
             </TableRow>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/RolesTableRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
         </TableLayout>
-
     </ScrollView>
-
     </LinearLayout>
 
     <LinearLayout
@@ -76,17 +76,17 @@
         android:orientation="horizontal"
         android:layout_gravity="center">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="cancel"
             android:layout_marginRight="20dp"
             android:text="CANCEL" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="newChild"
+            android:onClick="addNewRole"
             android:text="ADD NEW RECORD"/>
     </LinearLayout>
 
