--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_roles_table_details.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/activity_roles_table_details.xml
@@ -6,65 +6,52 @@
     android:orientation="vertical"
     tools:context=".AdminView.Role.RolesTableDetails">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/sponsor_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#CE000000"
-        >
-    </androidx.appcompat.widget.Toolbar>
+        android:layout_height="wrap_content"/>
 
-    <TextView
-        android:layout_gravity="center"
+    <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="EDIT ROLE &amp; SAVE"
+        android:text="EDIT ROLE"
+        android:textSize = "20dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-
-
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="500dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-
-        android:orientation="vertical">
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:background="@drawable/cell_shape">
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/role"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:hint="Role Name">
 
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="ROLE"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/person_outline"
+                    android:drawablePadding="@android:dimen/app_icon_size" />
 
-
-                        android:textSize="15dp"/>
-
-                    <EditText
-                        android:id="@+id/role"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:hint="STATUS" />
-                </LinearLayout>
-
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
         </ScrollView>
 
