--- a/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/orphange_spinner.xml
+++ b/Android Java Retrofit Node Express- Orphanslife/app/src/main/res/layout/orphange_spinner.xml
@@ -2,8 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:gravity="center">
+
+    <com.google.android.material.imageview.ShapeableImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/close"
+        app:shapeAppearanceOverlay="@style/circleImageView"
+        android:background="@color/md_theme_light_onPrimary"
+        android:id="@+id/close"
+        android:layout_marginBottom="40dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -12,7 +22,8 @@
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/addOrphanageSpinner"/>
+            android:id="@+id/addOrphanageSpinner"
+            style="@style/Spinner"/>
     </LinearLayout>
 
 </LinearLayout>
