--- a/React - website Orphanslife/src/Layouts/navbar/Navbar.css
+++ b/React - website Orphanslife/src/Layouts/navbar/Navbar.css
@@ -1,26 +1,22 @@
 .navbar {
-    height: 10vh;
+    height: 15vh;
     background: #000000;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-bottom: 0%;
   }
   
   .navbar-logo {
     color: rgb(255, 255, 255);
     font-size: 2rem;
     display: flex;
-    /* align-items: center; */
     justify-content: space-between;
   }
   
   .nav-items {
     display: flex;
-    list-style: none;
     text-align: center;
-    width: 50vw;
+    width: 40vw;
     justify-content: flex-center;
-    margin-right: 2rem;
   }
   
   .nav-item {
